Fix: Female to Male call notifications - Auto-send FCM token on app start/resume
CRITICAL FIX: Male users were not receiving incoming call notifications from females due to missing FCM tokens in database.

Root Cause:
- FCM tokens were only sent during login (OTP/Truecaller)
- Tokens were not re-sent when app reopened later
- Expired/cleared tokens prevented call notifications

Solution:
- MainActivity now sends FCM token on onCreate() (app start)
- MainActivity re-sends FCM token on onResume() (app resume)
- Ensures male users always have valid FCM token for incoming calls

Files Changed:
- android_app/app/src/main/java/com/onlycare/app/presentation/MainActivity.kt
  * Added FCM token sending in onCreate (line ~157-180)
  * Added FCM token re-sending in onResume (line ~442-465)

Testing:
- Male user opens app -> FCM token sent to backend
- Verify fcm_token is not NULL in database
- Female calls male -> Male receives notification -> Call connects

Documentation:
- FEMALE_TO_MALE_CALL_FIX_SUMMARY.md - Complete technical summary
- android_app/FCM_TOKEN_FIX.md - Detailed implementation
- android_app/BUILD_FCM_FIX.sh - Build script

No backend changes required - endpoint already exists and works.

--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -120,6 +120,15 @@
             android:turnScreenOn="true"
             android:excludeFromRecents="true" />
         
+        <!-- Rating Activity - Separate activity for rating users after call -->
+        <activity
+            android:name=".presentation.screens.call.RatingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.OnlyCare"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:excludeFromRecents="false" />
+        
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
